# ai-accounts-hub

./: .gitignore  LICENSE  README.md  bump.config.ts  index.html  package.json  pnpm-lock.yaml
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/native/macos/: AAHStatusBarBridge.h  StatusBarBridgeController.swift  StatusBarBridgeExports.swift  StatusBarBridgeModels.swift  StatusBarMenuControls.swift  StatusBarMenuPresentation.swift  StatusBarMenuTheme.swift  StatusBarMenuView.swift  StatusBarStatusItemIcon.swift  status_bar_bridge.m
src-tauri/src/: cli_binary_resolver.rs  cli_process_utils.rs  fs_utils.rs  lib.rs  main.rs  proxy_env.rs  startup_account_import.rs  time_utils.rs
src-tauri/src/app_settings/: mod.rs  models.rs  service.rs  store.rs
src-tauri/src/claude_accounts/: auth.rs  cli.rs  keychain.rs  live_credentials.rs  mod.rs  models.rs  paths.rs  service.rs  store.rs
src-tauri/src/claude_usage/: cli_probe.rs  mod.rs  models.rs  oauth.rs  service.rs  store.rs
src-tauri/src/codex_accounts/: auth.rs  cli.rs  mod.rs  models.rs  paths.rs  schedule.rs  service.rs  store.rs
src-tauri/src/codex_usage/: mod.rs  models.rs  oauth.rs  scheduler.rs  service.rs  store.rs
src-tauri/src/gemini_accounts/: auth.rs  cli.rs  mod.rs  models.rs  paths.rs  (+2 more)
src-tauri/tests/: app_settings_service.rs  app_settings_store.rs  claude_accounts_auth.rs  claude_accounts_live_credentials.rs  claude_accounts_service.rs  claude_accounts_store.rs  claude_usage_cli_probe.rs  claude_usage_oauth.rs  claude_usage_service.rs  claude_usage_store.rs  codex_accounts_auth.rs  codex_accounts_schedule.rs  codex_accounts_service.rs  codex_accounts_store.rs  codex_usage_oauth.rs  codex_usage_service.rs  codex_usage_store.rs  gemini_accounts_auth.rs  gemini_accounts_service.rs  gemini_accounts_store.rs  gemini_usage_oauth.rs  gemini_usage_service.rs  gemini_usage_store.rs  status_bar_bridge_payload.rs  status_bar_menu_model.rs  status_bar_native_bridge_icon.rs  status_bar_native_bridge_json_nulls.rs  status_bar_native_bridge_layout.rs  status_bar_native_bridge_payload_decode.rs  status_bar_native_bridge_presentation.rs  status_bar_native_bridge_theme.rs  status_bar_native_bridge_threading.rs
(+80 files in other folders)
